update membuat fungsi tombol daftar

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,8 @@
               >Program Pelatihan</a
             >
             <a
-              href="#"
+              href="https://wa.me/6288261991512
+              "
               class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg ml-4 transition"
             >
               Daftar Sekarang
@@ -376,7 +377,7 @@
                   <p class="py-5">
                     <a
                       class="mt-6 text-xl px-3 py-4 text-white rounded-md bg-blue-500"
-                      href=""
+                      href="https://wa.me/6288261991512"
                       >Daftar Sekarang</a
                     >
                   </p>
